[package]
name = "configur"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = { version = "4.3.23", features = ["derive"] }
glob = "0.3.1"
minijinja = "1.0.7"
serde_json = "1.0.105"
serde_json_merge = { version = "0.0.4", features = ["merge", "sort"] }
serde_yaml = "0.9.25"
